updated at: 2023-04-25 21:33, トライアングルピアス - FREiHEiT - BOOTH

--- a/VRChat/14/1367414.html
+++ b/VRChat/14/1367414.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "WaILqlJUjtJqvPRSWHCOoscZMuNjZ8UllHlpwxP9uS4="></script>
+    "Vw5Tbu5hIc+jR2w5iEcQoo3spjDxrxzCsfJCSe8PSSk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"トライアングルピアス","description":"三角のチャームがモードな雰囲気のあるピアスです。\n\ndynamicboneをprefabに設定してありますが、設定に自信がないため気に入らない場合は各自調整をお願いいたします...\n\n△1520\n\n内容\n・テクスチャ２種\n・FBX\n・unitypackage\n\nご不明な点があればこちらまで\nTwitter：@xxxcheshire","url":"https://booth.pm/ja/items/1367414","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/4fdc9e94-5f81-45ad-b233-ea32015c3ca3/i/1367414/8f003684-dfb2-4aef-932b-073653e1a9ef_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WaILqlJUjtJqvPRSWHCOoscZMuNjZ8UllHlpwxP9uS4="></script>
+    nonce="Vw5Tbu5hIc+jR2w5iEcQoo3spjDxrxzCsfJCSe8PSSk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1367414/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               221
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1367414/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               221
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
