updated at: 2023-04-25 21:34, オリジナル３Dモデル「Zero」 - T.GardeN - BOOTH

--- a/VRChat/21/1319621.html
+++ b/VRChat/21/1319621.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zRAJ0Q8ZLCfctWAqknsN9Wt7dn/lbirfpFEIucJ8TzY="></script>
+    "fOn/sFTKeyQcJBBJFPOEfmsD6ht2U8R+56TJVIt2nss="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル「Zero」","description":"オリジナル3Dモデル『Zero』\n制作者：ちゅばき\n\n本モデルはVRchatでの利用を想定したunityのHumanoid形式に対応した\n3Dモデルデータです。商用利用や改変が可能で、ゲームや配信等にも\n使うことができます。","url":"https://booth.pm/ja/items/1319621","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"3500","highPrice":"5000"},"image":"https://booth.pximg.net/c/620x620/8691a6f9-9d2a-4225-8f87-0460ab5c5187/i/1319621/12406e47-b622-4de6-856b-483d16502dfa_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zRAJ0Q8ZLCfctWAqknsN9Wt7dn/lbirfpFEIucJ8TzY="></script>
+    nonce="fOn/sFTKeyQcJBBJFPOEfmsD6ht2U8R+56TJVIt2nss="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,10 +186,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1319621/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1375
+                              1376
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1319621/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1375
+                              1376
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
