updated at: 2023-04-25 21:34, 【ミケ(幸霊)】VerRefine_オリジナル3Dモデル - ALL_Alone_Connect - BOOTH

--- a/VRChat/11/1319111.html
+++ b/VRChat/11/1319111.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "SgoxmPraEInoO+rMKi4/Z5o0d6phuETo0hs6h5/MBIk="></script>
+    "9U9xiVkNonEHcgO/A518hB38ORSVGbKc932gqu8Baxw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ミケ(幸霊)】VerRefine_オリジナル3Dモデル","description":"【ミケ(幸霊)】VerRefine_オリジナル3Dモデルの商品紹介","url":"https://booth.pm/ja/items/1319111","offers":{"priceCurrency":"JPY","@type":"Offer","price":"20000"},"image":"https://booth.pximg.net/c/620x620/7250dbe0-9ae9-4e79-aaf5-d9d36bfb6df1/i/1319111/dc69be57-8de6-4417-aebd-97f9d66671a4_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SgoxmPraEInoO+rMKi4/Z5o0d6phuETo0hs6h5/MBIk="></script>
+    nonce="9U9xiVkNonEHcgO/A518hB38ORSVGbKc932gqu8Baxw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1319111/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1077
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1319111/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1077
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
