updated at: 2023-04-25 21:34, Punishment - Gottes Melodie EP - GIDEON/MUHAREM - BOOTH

--- a/VRChat/85/1319185.html
+++ b/VRChat/85/1319185.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bx5ATxlVdHPzla7Hx04OJjjnWXNNPoo5UjK0ejWApqI="></script>
+    "fz1AjbxZWzuE0e9jUWVD90DIJqcSq58X0LuBRGkRsP0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Punishment - Gottes Melodie EP","description":"VRchatのコミュニティで色々触発されて作った曲のデモです。\n\n1.Punishment\n2.Gottes Melodie\n\n・個人的な範囲を超える目的で使用することを禁止します。 \n・再配布、ネットなどを通じてこの楽曲を送信できる状態にすることを禁止します。","url":"https://booth.pm/ja/items/1319185","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/37b5cb30-6505-46fd-809a-bcaa84b3f8ab/i/1319185/ccde65f4-9827-4e61-9f1f-c87db96cb881_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bx5ATxlVdHPzla7Hx04OJjjnWXNNPoo5UjK0ejWApqI="></script>
+    nonce="fz1AjbxZWzuE0e9jUWVD90DIJqcSq58X0LuBRGkRsP0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1319185/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               61
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1319185/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               61
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
