updated at: 2023-04-25 21:34, オリジナル３Ｄモデル　「大葉ねこな」 - 大葉ねこな堂 - BOOTH

--- a/VRChat/53/1319153.html
+++ b/VRChat/53/1319153.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xyClIyGQUT8oDLPucIJS2F55nYBBilAj33+HnpeFxng="></script>
+    "PPm3X7DZVDWiDAuy0ZMCfCNvgU94p3zzASHssHBdnZ4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Ｄモデル　「大葉ねこな」","description":"「大葉ねこな」は白猫を擬人化したオリジナル３Ｄモデルですにゃ。\n\nねこなをお迎えして遊んで欲しいにゃ\n\n2019/08/11 Ver1.0.4にバージョンアップしました(詳細は下記の更新情報をご確認下さい)。\n","url":"https://booth.pm/ja/items/1319153","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3800"},"image":"https://booth.pximg.net/c/620x620/7d58dd49-9a68-4379-96c8-58c7b63ab4a2/i/1319153/86f8553f-ed28-4d76-a255-49a05cc89bef_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xyClIyGQUT8oDLPucIJS2F55nYBBilAj33+HnpeFxng="></script>
+    nonce="PPm3X7DZVDWiDAuy0ZMCfCNvgU94p3zzASHssHBdnZ4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1319153/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               710
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1319153/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               710
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
