--- a/VRChat/92/1299892.html
+++ b/VRChat/92/1299892.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+oJHT4opsWKxrJo9JCSaKjEU2qYLRxGSIPW/BWqttmI="></script>
+    "iEPdE/EnicyHHRwFSfRBBgn8mRA43FgeFWKdLDxZqes="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】「ココスコ」ペッパーソースの3Dモデル","description":"ペッパーソースの3Dモデルです。\n\nFBXとunitypackageでの配布となります。\nstandardシェーダーでうまく表示できなかったワケあり商品なので無料です。\n（本当はガラスの外側を半透明にして不透明な中のソースを見せる形にしたかったのですがうまく表示できなかったのでガラス自体をソースの色で着色してしまっています。）\n四拾弐重工販売所様のPBTシェーダーを同梱させていただきました。\n\nブースト用有料版にはおまけとしてココスコのラベル画像単品をお付けします。（いらねえ）\n\n商用利用・私的利用ともに自由です。\nゲーム・映像・静止画等ご自由にどうぞ。\n改変についてもご自由にどうぞ。\n\n本モデルがコンテンツの主体となるような形での再配布・販売はお控えください。\n（基本的にVRChat内での利用に関しては制限はありません。）\n\n・免責事項\n本モデルを使用していかなる損害が発生したとしても、\n制作者（anagot）はいかなる責任も負いません。\n使用は自己責任でお願いします。\n\n・更新履歴\n2019/04/16　配布開始","url":"https://booth.pm/ja/items/1299892","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/baa79e90-c507-4a8f-8faf-001fe59957c9/i/1299892/717eae2e-c8eb-4114-a50b-866d4c6fbc46_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+oJHT4opsWKxrJo9JCSaKjEU2qYLRxGSIPW/BWqttmI="></script>
+    nonce="iEPdE/EnicyHHRwFSfRBBgn8mRA43FgeFWKdLDxZqes="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1299892/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               119
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1299892/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               119
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
