updated at: 2023-04-25 21:35, NowLoading... - おむすとあ - BOOTH

--- a/VRChat/81/1318681.html
+++ b/VRChat/81/1318681.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xPLJoJ/taySbHalm17qW6KdLdanXM82Sq67S44sHnio="></script>
+    "j8ChW9eOB2SrHWbZNozlPyWNyTysykthu/pBsBpeLKg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"NowLoading...","description":"Loading中です\n\n元ファイルをそのまま販売することのみ禁止します．\n\n改変その他ご自由にお使いください．\n\n使用により起こった事象について作者は責任を負いません．\n\n先にVRCSDKを導入しておいてください\n\n作者：おむらいす\ntwitter：https://twitter.com/a_mochiya","url":"https://booth.pm/ja/items/1318681","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/7feb03e9-a642-4ed6-b66d-d6b85ca592af/i/1318681/2ac3e991-f43c-4850-8729-225466cacc75_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xPLJoJ/taySbHalm17qW6KdLdanXM82Sq67S44sHnio="></script>
+    nonce="j8ChW9eOB2SrHWbZNozlPyWNyTysykthu/pBsBpeLKg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1318681/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               313
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1318681/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               313
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
