--- a/VRChat/38/1318038.html
+++ b/VRChat/38/1318038.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0kGdlBQOPzReNcXlEVOON859FyT3TqwgN+Ss+SmYWC0="></script>
+    "bmgHQzPPn2Jyp595+Lu97cw9OazpNBMqFW7P986Mu+0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"NPL10 Pistol Flashlight","description":"NITECORE® NPL10 Pistol Flashlight\n\n[Polygon]\nFaces - 3478\nTris  - 6778\n\n[Texture]\n-Basement\n-Metallic\n-Normal\n\n1024x1024\n2048x2048\n\n[File]\nNITECORE_NPL10.unitypackage\n(7,489KB)\n\n[Email]\nphecrys@gmail.com\n\n-----\n\nThx 4 watch my model\n","url":"https://booth.pm/ja/items/1318038","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/4a1c1edc-9b81-4a0c-9a1f-0a5af94b8e1a/i/1318038/16e73296-b468-496e-b531-2e746f6c095d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0kGdlBQOPzReNcXlEVOON859FyT3TqwgN+Ss+SmYWC0="></script>
+    nonce="bmgHQzPPn2Jyp595+Lu97cw9OazpNBMqFW7P986Mu+0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1318038/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              36
+                              37
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1318038/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              36
+                              37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
