--- a/VRChat/00/1316700.html
+++ b/VRChat/00/1316700.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "lWge+k73q65K67mgifwiLWHhRKlCq65yCmaMLQa/kMc="></script>
+    "uIVpzgLfrpEGdicGCS8mbpt3Ca1hG2Cmhdx8FKpBQqA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【INGY Knives vol.1】fbxモデル","description":"カランビットナイフ、タクティカルナイフ、ククリナイフ、トマホークです。\n\n４本セットには特典として商品画像一枚目のダマスカスナイフがついてきます。\n※４本セット以外にはダマスカスマテリアルは付属しません。\n\nunitypackageをインポートしてお使いください。","url":"https://booth.pm/ja/items/1316700","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/d0287a31-78e9-429d-804d-e3582e9dc539/i/1316700/68023c76-e7c0-4cd0-b541-16ec6c748ddb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lWge+k73q65K67mgifwiLWHhRKlCq65yCmaMLQa/kMc="></script>
+    nonce="uIVpzgLfrpEGdicGCS8mbpt3Ca1hG2Cmhdx8FKpBQqA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1316700/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1316700/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
