--- a/VRChat/61/1315061.html
+++ b/VRChat/61/1315061.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ksu28jLPZ6BD5xf6hWWgElPypPpLUm/ph3/lj4zumgg="></script>
+    "+zkecO+QYDZSKD1fB8ovwSNxOssXvAjdS22odJLY2ZQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Rabies】fbxモデル","description":"なんか悪そうな剣です。読み方は\"レイビーズ\"です\nunitypackageをインポートした後、Rabiesフォルダ内にあるprefabをHierarchyにドラッグ\u0026ドロップすると簡単にご使用できます。\n色変更用のマテリアルをColorフォルダ内に9色用意してあります。Emissionを適応すると画像二枚目のように暗闇でぼんやりと部分的に明るく表示されます。","url":"https://booth.pm/ja/items/1315061","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/d0287a31-78e9-429d-804d-e3582e9dc539/i/1315061/ac9fa439-aeb0-4db1-8689-fb10a16a139d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ksu28jLPZ6BD5xf6hWWgElPypPpLUm/ph3/lj4zumgg="></script>
+    nonce="+zkecO+QYDZSKD1fB8ovwSNxOssXvAjdS22odJLY2ZQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1315061/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1315061/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
