updated at: 2023-04-25 21:36, あすかろ式ぐんそー - 緑まみれ同好会 - BOOTH

--- a/VRChat/06/1317706.html
+++ b/VRChat/06/1317706.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "oCltajD/tV8TqqfEbBWjXnwLaiZ4KOO+0qoubDt8+p0="></script>
+    "CfU60LxU87KTqjFH6MPksoxgH5Nl1UMcebToRZO81I8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"あすかろ式ぐんそー","description":"あすかろ様（@ascaro001）（https://ascaro.booth.pm/）製作のVRChat向け３Dモデルです。許可を頂いてこちらでの配布をしています。\n\nhumanoidアバターモデル（フルトラ非対応）が１体、genericアバターモデルが１体入っています。\n同梱されている規約をよくお読みの上ご利用ください。\n\n設定済みunitypackageを同梱しておりますのですぐにお迎えできます。\n※当モデルはunityアセットのDynamic Bone使用を想定しています。\n\n----内容物----\nテクスチャデータ\nfbxファイル\nunitypackageファイル\n規約テキストファイル\n--------------","url":"https://booth.pm/ja/items/1317706","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b5f9e3c4-c04c-4e1e-85ab-dbc77853e6a0/i/1317706/b9ab5476-86ed-40a6-8487-255852dcab0b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oCltajD/tV8TqqfEbBWjXnwLaiZ4KOO+0qoubDt8+p0="></script>
+    nonce="CfU60LxU87KTqjFH6MPksoxgH5Nl1UMcebToRZO81I8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1317706/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1317706/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
