updated at: 2023-04-25 21:37, ブロック、コイン、スター、どんぐり（スーパーマリオ）おまけつき - lyohm(リオム) - BOOTH

--- a/VRChat/02/1317202.html
+++ b/VRChat/02/1317202.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "x1/HdoF9d32SStdhk3rV5QaSg5S5041Ee63gqn4BX+I="></script>
+    "2MDpqIeu69K05dHLHF7lNVLyu7Ns5OoQMZnHij5V7co="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ブロック、コイン、スター、どんぐり（スーパーマリオ）おまけつき","description":"追記\nおまけでノコノコをつけました。\n適当に使ってください。\n\n===================================\n\nスーパーマリオシリーズ\nブロック、コイン、スター、ドングリをセットにしています。\n\nVRChatやクリスタなどに使えると思います。\n\n\n○内容物\n・ブロック（使用済み）：566ポリゴン\n・ブロック（レンガ）　：892ポリゴン\n・コイン　　　　：316ポリゴン\n・スターコイン　：780ポリゴン\n・スター　　　　：465ポリゴン\n・どんぐり　　　：568ポリゴン\n\nテクスチャサイズは1024x1024px。\nfbxファイルのほかblendファイル(バージョン2.79版)も同梱してます。\n\n\nほかに公開しているマリオシリーズはこちら。\n\nパックンフラワー\nhttps://lyohm.booth.pm/items/1295052\n\nクリボー、キノコ、ハテナブロック\nhttps://lyohm.booth.pm/items/1307341\n\n\n--------------------\n\n【利用規約】\n下記の利用規約に同意した場合にのみ購入してください。\n\n可能なこと\n・VRChatやゲーム等への組み込み\n・xR、メタバース上での利用\n・そのほか動画や静止画への利用\n・モデルの改造\n\n禁止すること\n・当データをBOOTHや他のサイト、またはメディアで3Dデータとして販売すること。\n　（無償提供も含む）\n・NFTとしての販売\n・その他商用利用\n\n免責\n・このモデルを利用することで発生した問題について当方は一切の責任を負いません。\n","url":"https://booth.pm/ja/items/1317202","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/d641cff2-c5ca-40b4-9130-5e88a73e9182/i/1317202/0501cb49-9475-418c-912c-811e0419c447_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="x1/HdoF9d32SStdhk3rV5QaSg5S5041Ee63gqn4BX+I="></script>
+    nonce="2MDpqIeu69K05dHLHF7lNVLyu7Ns5OoQMZnHij5V7co="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1317202/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              15
+                              16
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1317202/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              15
+                              16
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
