--- a/VRChat/68/1316968.html
+++ b/VRChat/68/1316968.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Cn1JSb3y5BilFTAeN7c2Mfm9QPuMGXMTBnFk15EzOKI="></script>
+    "WnuzuujkrsWNEzc1atpWt5TdsdeplR2RQZbwToRgUP4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バラの花 3Dモデル","description":"※初めてCGモデルを出品しているため不備などございましたらお手数ですが https://twitter.com/ochokonoflower までご連絡をお願いいたします。※\n\nバラの3Dモデルです。\n\n頂点数はおよそ20000です。\n\n〇形式\nfbx形式,、obj形式の2種類のファイルが入っています。\n（希望があれば別の形でも書き出せますのでお申し付けください）\n\n〇利用規約\n商用利用・再配布以外は可能です。\nご自由にお使いください。","url":"https://booth.pm/ja/items/1316968","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/444e0ab5-9196-439c-ad4a-029eaef5a4b2/i/1316968/831a7292-adf5-4d85-a9d1-d152d0f07165_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Cn1JSb3y5BilFTAeN7c2Mfm9QPuMGXMTBnFk15EzOKI="></script>
+    nonce="WnuzuujkrsWNEzc1atpWt5TdsdeplR2RQZbwToRgUP4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1316968/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1316968/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
