updated at: 2023-04-25 21:37, VRChat想定アバター シルク=ファン=ハウテン - りんごじゅ～す - BOOTH

--- a/VRChat/80/1316780.html
+++ b/VRChat/80/1316780.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZCVzFl56Bc1cKjwXoOIAfRjosOAAytUB9CS33IcU6fw="></script>
+    "Gtzyvg/5JktalsQY9PSjuuKhMopUqzN+6ugZgFa61sw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定アバター シルク=ファン=ハウテン","description":"ミルコの姉？兄？\nふわっとさらさら髪がチャームポイント\n\n耳はやっぱり４つあります\n定位置がしっかりします（は？\n\n大幅値引きしました～ヾ(๑╹◡╹)ﾉ\"\n\n■Ver01.01変更点：\n申し訳ありません。視点の高さのミスを修正しました\n異常になで肩になってしまうのが修正されます\n\n再セットアップが手間でしたら、\nコンポーネントVRC_Avatar Descriptorの\nView PositionのY値を0.74にすると新版同様になります","url":"https://booth.pm/ja/items/1316780","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"250","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/629c352e-e1a6-41ad-93c6-1a028df6b5cd/i/1316780/9674d8a6-401c-41d6-b5a0-9248685bbdd5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZCVzFl56Bc1cKjwXoOIAfRjosOAAytUB9CS33IcU6fw="></script>
+    nonce="Gtzyvg/5JktalsQY9PSjuuKhMopUqzN+6ugZgFa61sw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1316780/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1316780/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
